优化距离计算，及错误位置提示